# packing-report

./: .env.example  .gitignore  API_Test.ipynb  Live-Win-Prob  Makefile  README.md  Roadmap.md  api_test.py  cI.db  docker-compose.yml  eval.ipynb  fill_database.ipynb  fill_database.py  football_api.ipynb  gi.py  goal-impact.ipynb  pyproject.toml  requirements.in  requirements.txt  reset_db.py  sandbox.ipynb
.deprecated/: README.md
.deprecated/GI-betting-analyser/: README.md  oddsAPI.py  twitterAPI.py
.deprecated/xC/: README.md
.github/workflows/: ci.yml
Goal-Difference-Elo-GDE/: .gitignore  db_handler.py  elo.py  explore_k.ipynb  fbref_scrape_bdate.ipynb  football_api.ipynb  footballsquads_handler.py  game_timeline.py  gde_io.py  goal-impact.ipynb  player.py  player_birthday_db.csv  reset_db.py  sandbox.ipynb
Goal-Difference-Elo-GDE/_deprecated/: game.py
Goal-Difference-Elo-GDE/database_io/: db_handler.py  db_player.py  db_player_age.py
Goal-Difference-Elo-GDE/game/: game_timeline.py
Goal-Difference-Elo-GDE/gde_utils/: gde_utils.py
Goal-Difference-Elo-GDE/metrics/: elo.py
Goal-Difference-Elo-GDE/scraper/: footballsquads_scraper.py
Goal-Difference-Elo-GDE/tests/: NO_test_elo.py  test_elo.py  test_footballsquads_handler.py
Live-Win-Prob/: .gitignore  README.md
Live-Win-Prob/notebooks/: inference.ipynb  inference_100_models.ipynb  inference_advi.ipynb  test_100_models.ipynb  test_model.ipynb  test_model_advi.ipynb  test_verbesserung.ipynb  test_verbesserung2.ipynb  training_data.ipynb  verbesserung.ipynb  verbesserung2.ipynb  xT.ipynb
Live-Win-Prob/utils/: lwp_drawing_utils.py  lwp_training_data.py  lwp_utils.py
OddsToPercentage/: README.md  oddCalculation.py
_deprecated/: game.py
api/: football_api.py
configs/: __init__.py  config.toml  league_dict.json  league_replacements.json  name_replacer.py  teamname_replacements.json
corner-impact/: corner-impact.ipynb
data_retrieval/: README.md  main.py  pyproject.toml
data_retrieval/src/data_retrieval/api/: football_api.py
data_retrieval/src/data_retrieval/scraper/: club_elo_scraper.py  footballsquads_scraper.py  scrape.ipynb  whoscored_chromeless.py  whoscored_scraper.py
data_retrieval/tests/: conftest.py
data_retrieval/tests/api/: test_football_api.py
data_retrieval/tests/scraper/: test_club_elo_scraper.py  test_footballsquads_scraper.py  test_whoscored_scraper.py
database_io/: MIGRATION_PLAN.md  README.md  __init__.py  connection.py  db_handler.py  db_handler_abs.py  main.py  pyproject.toml  reset_db.py  webpage.py
database_io/dims/: __init__.py  elo.py  games.py  player_age.py  tables.py
database_io/faks/: __init__.py  player.py  predictions.py  schedule.py  squads.py  tables.py  team.py
database_io/models/: __init__.py  game.py  legacy.py  metric.py  player.py  player_game.py  scrape.py  team.py
database_io/repositories/: game_repo.py  metric_repo.py  player_age_repo.py  player_repo.py  predictions_repo.py  schedule_repo.py  squads_repo.py  team_repo.py
deprecated/xC/: API_Test.ipynb
dev_notebooks/: corner-impact.ipynb  eval.ipynb  fbref_scrape_bdate.ipynb  goal-impact.ipynb  mov_elo.ipynb  mov_elo_pyro copy.ipynb  mov_elo_pyro.ipynb  sandbox.ipynb  xt.ipynb
eval/: README.md  pyproject.toml
game/: game_timeline.py
gde/: config.toml  eval.ipynb  fbref_scrape_bdate.ipynb  goal-impact.ipynb  predict.ipynb  sandbox.ipynb
gde/_deprecated/: player.py
gde/database_io/: __init__.py  db_handler.py  db_handler_abs.py  db_player_age.py  webpage.py
gde/filesystem_io/: filesystem_io.py
gde/game/: game_timeline.py
gde/gde_utils/: date_utils.py  football_data_utils.py
goal-ipact/: goal-impact.ipynb
insights/: README.md  gi.py  pyproject.toml
insights/game/: __init__.py  game_facts.py  game_metrics.py  game_prepare.py  game_timeline.py
insights/metrics/high_level/: elo.py  metric.py  pm.py
insights/metrics/high_level/mov_elo/: regressor.py
insights/metrics/low_level/: goals.py  minutes.py  vaep.py  xt.py
jobs/: calc_metrics.Dockerfile  fetch_schedule.Dockerfile
metrics/: elo.py  metric.py  pm.py
notebooks/: mov_elo_pyro copy.ipynb  xt.ipynb
pipeline/: .gitignore  fetch_data.py  fetch_formation.py  fetch_schedule.py  handlers_packing.py  live_scores_betting_tips.ipynb  mail-secret.json  pipeline.md  update_data.py  update_schedule_packing.py
scraper/: footballsquads_scraper.py  scrape.ipynb  whoscored_chromeless.py  whoscored_scraper.py
tests/: conftest.py  test_footballsquads_handler.py  test_goals.py  test_minutes.py  test_name_replacemant.py
utils/: date_utils.py  filesystem_io.py  football_data_utils.py  oddCalculation.py  pyproject.toml
webpage/: app.py  main.py  pyproject.toml  test.ipynb
website/: app.py  tables.csv
xT-impact/: .gitignore  README.md  bet_data.ipynb  calc_xT_impact_attack.ipynb  explorative_data.ipynb  pymc.ipynb  pymc_over_shrinkage.ipynb  scrape.ipynb  xT.ipynb
(+94 files in other folders)
