[project]
name = "packing-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-mantine-components>=2.3.0",
    "multimethod==2.0.1",
    "ngboost>=0.5.7",
    "oracledb>=3.4.0",
    "pandera==0.17.2",
    "seaborn>=0.13.2",
    "socceraction>=1.5.3",
    "soccerdata>=1.8.7",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ruff>=0.14.1",
]
