[project]
name = "packing-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "data_retrieval",
    "insights",
    "database_io",
    "webpage",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"  # adjust to your Python version

[tool.ruff.lint]
select = [
  "E",   # pycodestyle (PEP errors)
  "F",   # pyflakes
  "I",   # isort (imports)
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplifications
]

ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
