[project]
name = "packing-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.uv.workspace]
members = [
    "data_retrieval",
    "insights",
    "database_io",
    "eval",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "pandas>=2.3.3",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["*.ipynb", "dev_notebooks"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle (PEP errors)
  "F",   # pyflakes
  "I",   # isort (imports)
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplifications
]

ignore = []

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
