[project]
name = "data-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "database-io",
    "beautifulsoup4>=4.14.3",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "setuptools>=82.0.1",
    "soccerdata>=1.8.7",
    "toml>=0.10.2",
]

[tool.uv.sources]
database-io = { workspace = true }
