[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"database_io" = "."

[tool.setuptools]
packages = ["database_io", "database_io.models", "database_io.repositories"]

[project]
name = "database-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

dependencies = [
    "numpy>=1.26.4",
    "oracledb>=3.4.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.7",
    "sqlalchemy>=2.0.48",
]
