[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[project]
name = "eval"
version = "0.1.0"
description = "Model evaluation and plotting scripts"
readme = "README.md"
dependencies = [
    "database-io",
    "insights",
    "matplotlib>=3.8",
]

[tool.uv.sources]
database-io = { workspace = true }
insights = { workspace = true }
