[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils", "utils.*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-dir]
"" = "."

[project]
name = "utils"
version = "0.1.0"
dependencies = []
